[gd_scene load_steps=9 format=3 uid="uid://dgngcfpk2ekxh"]

[ext_resource type="PackedScene" uid="uid://ddmwo6h4l2cyx" path="res://clk_ctrl.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://bimwakc0p7xiu" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cod5tur1c6b58" path="res://prog_input.tscn" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://d0wqvrh5gq4eb" path="res://table.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://bfficwytw38qp" path="res://Modules/bit_indicator.tscn" id="5_lquwl"]
[ext_resource type="Script" uid="uid://oe1uydbhy328" path="res://Modules/Table/table.gd" id="6_7mycd"]

[sub_resource type="SystemFont" id="SystemFont_3wwbt"]

[sub_resource type="LabelSettings" id="LabelSettings_7mycd"]
paragraph_spacing = 18.0
font = SubResource("SystemFont_3wwbt")
font_size = 8
outline_size = 8

[node name="Main" type="MarginContainer" groups=["responds_reset"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_1bvp3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Raster
Screen"

[node name="Button2" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Vector
Screen"

[node name="Button3" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Teletype"

[node name="Spacer" type="Control" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Archie" type="OptionButton" parent="VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Selected CPU"
popup/item_0/id = 0

[node name="Body" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Inputs" type="TabContainer" parent="VBoxContainer/Body"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
current_tab = 0

[node name="Prog" parent="VBoxContainer/Body/Inputs" instance=ExtResource("1_h2yge")]
unique_name_in_owner = true
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="VBoxContainer/Body/Inputs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Switches" type="VBoxContainer" parent="VBoxContainer/Body/Inputs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Clk_Ctrl" parent="VBoxContainer/Body/VBoxContainer" instance=ExtResource("1_0xm2m")]
layout_mode = 2

[node name="Table" parent="VBoxContainer/Body/VBoxContainer" instance=ExtResource("2_h2yge")]
unique_name_in_owner = true
layout_mode = 2

[node name="Exec_Info" type="TabContainer" parent="VBoxContainer/Body"]
layout_mode = 2
current_tab = 0

[node name="Monitor" type="HBoxContainer" parent="VBoxContainer/Body/Exec_Info"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body/Exec_Info/Monitor"]
layout_mode = 2

[node name="Flags" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer" instance=ExtResource("5_lquwl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
bits = Array[bool]([false, false])
labels = Array[String](["BUSY", "RQST"])
text_setts = SubResource("LabelSettings_7mycd")

[node name="Reg_List" type="ItemList" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_width = true
item_count = 2
max_columns = 2
same_column_width = true
item_0/text = "REG"
item_1/text = "0000"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Body/Exec_Info/Monitor"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2"]
layout_mode = 2

[node name="Add_Addr" type="Button" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="Spacer" type="Control" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rem_Addr" type="Button" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Rem"

[node name="Watch_List_Man" type="Control" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2/Watch_List_Man"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Watch_List" type="Control" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_7mycd")
columns = Array[String](["Addr", "Val"])
metadata/_custom_type_script = "uid://oe1uydbhy328"

[node name="Label" type="Label" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2"]
layout_mode = 2
text = "Addr Watch"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/Body/Exec_Info/Monitor"]
layout_mode = 2

[node name="table_deselect" type="Button" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer3"]
layout_mode = 2
text = "Deselect"

[node name="Disasm_List" type="ItemList" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_width = true
max_columns = 2

[node name="Label" type="Label" parent="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer3"]
layout_mode = 2
text = "Disassembly"

[node name="Decoder" type="VBoxContainer" parent="VBoxContainer/Body/Exec_Info"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Docum" type="VBoxContainer" parent="VBoxContainer/Body/Exec_Info"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Status" type="Label" parent="VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
text = "Status..."

[node name="Spacer" type="Control" parent="VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Credits" type="Label" parent="VBoxContainer/Footer"]
layout_mode = 2
text = "Tinker Table, for Paracortical Initiative, Theklo Duarte"

[connection signal="parse_pressed" from="VBoxContainer/Body/Inputs/Prog" to="." method="_on_prog_parse_pressed"]
[connection signal="cycle_step_pressed" from="VBoxContainer/Body/VBoxContainer/Clk_Ctrl" to="." method="_on_clk_ctrl_cycle_step_pressed"]
[connection signal="exec_mode_changed" from="VBoxContainer/Body/VBoxContainer/Clk_Ctrl" to="." method="_on_clk_ctrl_exec_mode_changed"]
[connection signal="instr_step_pressed" from="VBoxContainer/Body/VBoxContainer/Clk_Ctrl" to="." method="_on_clk_ctrl_instr_step_pressed"]
[connection signal="rate_changed" from="VBoxContainer/Body/VBoxContainer/Clk_Ctrl" to="." method="_on_clk_ctrl_rate_changed"]
[connection signal="data_selected" from="VBoxContainer/Body/VBoxContainer/Table" to="." method="_on_table_data_selected"]
[connection signal="select_data_updated" from="VBoxContainer/Body/VBoxContainer/Table" to="." method="_on_table_select_data_updated"]
[connection signal="pressed" from="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2/HBoxContainer/Add_Addr" to="." method="_on_add_addr_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer2/HBoxContainer/Rem_Addr" to="." method="_on_rem_addr_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/Exec_Info/Monitor/VBoxContainer3/table_deselect" to="." method="_on_table_deselect_pressed"]
